@@ -5,23 +5,17 @@ import com.gbft.framework.data.RequestData;
 import com.gbft.framework.utils.Config;
 import com.gbft.framework.utils.DataUtils;
 
-
 import java.io.IOException;
 import java.io.OutputStream;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class Dataset {
 
     protected Map<Integer, AtomicInteger> records;
-    protected Map<Integer, Long> recordCurrVersion;
-
-    public Map<Integer, Long> recordLatVersion;
-
     protected Map<Integer, Long> recordCurrentVersion;
-
     public Map<Integer, Long> recordLatestVersion;
-
     public Entity entity;
 
     public static final int DEFAULT_VALUE = 1000;
@@ -31,209 +25,222 @@ public class Dataset {
         records = DataUtils.concurrentMapWithDefaults(RECORD_COUNT, x -> new AtomicInteger(DEFAULT_VALUE));
         recordCurrentVersion = new TreeMap<>();
         recordLatestVersion = new TreeMap<>();
-        recordCurrVersion = new TreeMap<>();
-        recordLatVersion = new TreeMap<>();
     }
 
-    // use this for copying service state
+    public Dataset(Entity entity) {
+        this();
+        this.entity = entity;
+    }
+
+    // Copy constructor
     public Dataset(Dataset dataset) {
-        records = new TreeMap<>();
+        records = new ConcurrentHashMap<>();
         for (var entry : dataset.records.entrySet()) {
-            this.records.put(entry.getKey(), new AtomicInteger(entry.getValue().get()));
+            records.put(entry.getKey(), new AtomicInteger(entry.getValue().get()));
         }
         recordCurrentVersion = new TreeMap<>();
         recordLatestVersion = new TreeMap<>();
-
     }
 
-    public void setRecords(Map<Integer, Integer> records) {
-        this.records.clear();
-        for (var entry : records.entrySet()) {
-            this.records.put(entry.getKey(), new AtomicInteger(entry.getValue()));
+    public void setRecords(Map<Integer, Integer> map) {
+        records.clear();
+        for (var entry : map.entrySet()) {
+            records.put(entry.getKey(), new AtomicInteger(entry.getValue()));
         }
     }
-    
+
     public Map<Integer, AtomicInteger> getRecords() {
         return records;
     }
 
     public int execute(RequestData request) {
-        //runComputeDummy(request);
+        // Track stats
+        entity.updateKeyAccessesInEpisode(request.getReadSetList());
+        entity.updateKeyAccessesInEpisode(request.getWriteSetList());
+
+        if(request.getWriteSetCount() > 0) {
+            entity.addWriteTransactionsCount(1);
+            entity.addTotalTransactionsCount(1);
+        }
+        else{
+            entity.addTotalTransactionsCount(1);
+        }
+        // entity.addWriteTransactionsCount(request.getWriteSetCount());
+        // entity.addTotalTransactionsCount(request.getWriteSetCount() + request.getReadSetCount());
 
         List<Integer> values = new ArrayList<>();
 
-        for (var op: request.getWriteSetList()){
+        for (var op : request.getWriteSetList()) {
             runComputeDummy(request);
-            values.add( processRequest(op) );
+            values.add(processRequest(op));
         }
 
-        for (var op: request.getReadSetList()){
-            runComputeDummy(request);
-            values.add( processRequest(op));
+        for (var op : request.getReadSetList()) {
+            values.add(processRequest(op));
         }
 
-        return values.getFirst();
+        return values.get(0);
     }
 
-    public void runComputeDummy(RequestData request){
-        // dummy computation
-        // try {
-        //     Thread.sleep(2);
-        // } catch (InterruptedException e) {
-        //     throw new RuntimeException(e);
-        // }
+    public void runComputeDummy(RequestData request) {
         if (request.getComputeFactor() > 0) {
-            var dummy_counter = 0;
+            int dummyCounter = 0;
             var random = new Random();
-            for (int i = 0; i < request.getComputeFactor(); i ++) {
-                dummy_counter += random.nextInt();
+            for (int i = 0; i < request.getComputeFactor(); i++) {
+                dummyCounter += random.nextInt();
             }
             try {
-                OutputStream.nullOutputStream().write(dummy_counter);
-            } catch (IOException e) {}
+                OutputStream.nullOutputStream().write(dummyCounter);
+            } catch (IOException ignored) {}
         }
     }
 
+    public int processRequest(OperationSet operation) {
+        AtomicInteger counter = records.computeIfAbsent(
+            operation.getRecord(),
+            x -> new AtomicInteger(DEFAULT_VALUE)
+        );
 
-    public int processRequest(OperationSet operation){
         return switch (operation.getOp()) {
-            case ADD -> records.get(operation.getRecord()).addAndGet(operation.getValue());
-            case SUB -> records.get(operation.getRecord()).addAndGet(-operation.getValue());
-            case INC -> records.get(operation.getRecord()).incrementAndGet();
-            case DEC -> records.get(operation.getRecord()).decrementAndGet();
-            default -> records.get(operation.getRecord()).get();
+            case ADD -> counter.addAndGet(operation.getValue());
+            case SUB -> counter.addAndGet(-operation.getValue());
+            case INC -> counter.incrementAndGet();
+            case DEC -> counter.decrementAndGet();
+            default -> counter.get();
         };
     }
 
+    /**
+     * Sets a single record to a specific value and bumps its version.
+     */
     public void update(RequestData request, int value) {
+        if (request.getWriteSetList().isEmpty()) {
+            return;
+        }
 
-        if(request.getWriteSetList().isEmpty()) return;
+        int record = request.getWriteSetList().getFirst().getRecord();
+        AtomicInteger counter = records.computeIfAbsent(
+            record,
+            x -> new AtomicInteger(DEFAULT_VALUE)
+        );
+        counter.set(value);
 
-        var record = request.getWriteSetList().getFirst().getRecord();
-        records.get(record).set(value);
-
-        this.recordCurrentVersion.put(record, recordCurrentVersion.getOrDefault(record, 0L) + 1);
+        recordCurrentVersion.merge(record, 1L, Long::sum);
     }
 
-    public RequestData executeAhead(Entity entity,RequestData request) {
+    public RequestData executeAhead(Entity entity, RequestData request) {
         this.entity = entity;
         List<Integer> values = new ArrayList<>();
-//        HashSet<Integer> tempRecords = new HashSet<>();
 
-        for (var op: request.getWriteSetList()){
+        for (var op : request.getWriteSetList()) {
             runComputeDummy(request);
-            values.add( processRequest(op) );
-//            long latestVersion = this.recordLatVersion.getOrDefault(op.getRecord(),Long.valueOf(0));
-//            this.recordCurrVersion.put(op.getRecord(),latestVersion);
+            values.add(processRequest(op));
+        }
+        for (var op : request.getReadSetList()) {
+            values.add(processRequest(op));
         }
 
-        for (var op: request.getReadSetList()){
-            runComputeDummy(request);
-            values.add( processRequest(op));
-        }
-
-        RequestData rr = null;
         try {
-
-//            entity.logger.write( recordCurrentVersion.getOrDefault(
-//                    !request.getWriteSetList().isEmpty() ?
-//                            request.getWriteSetList().getFirst().getRecord() :
-//                                (!request.getReadSetList().isEmpty() ?
-//                                        request.getReadSetList().getFirst().getRecord() :
-//                                        -1 )
-//                    , 0L).toString() );
-
-
-            rr = request.toBuilder().setEarlyExecResult(values.getFirst())
-                    .setCurrentVersion(
-                            recordCurrentVersion.getOrDefault(
-                                    !request.getWriteSetList().isEmpty() ?
-                                            request.getWriteSetList().getFirst().getRecord() :
-                                            (!request.getReadSetList().isEmpty() ?
-                                                    request.getReadSetList().getFirst().getRecord() :
-                                                    -1 )
-                                    , 0L)
+            return request.toBuilder()
+                .setEarlyExecResult(values.get(0))
+                .setCurrentVersion(
+                    recordCurrentVersion.getOrDefault(
+                        request.getWriteSetList().isEmpty()
+                            ? (request.getReadSetList().isEmpty() ? -1 : request.getReadSetList().getFirst().getRecord())
+                            : request.getWriteSetList().getFirst().getRecord(),
+                        0L
                     )
-                    .build();
-
-            return  rr;
+                )
+                .build();
+        } catch (Exception e) {
+            // log or rethrow as needed
+            return null;
         }
-        catch (Exception e){
-           // entity.logger.write("dataset 160 "+e.getMessage());
-        }
-        return null;
     }
 
-    public List<RequestData> executeRequestsAhead(Entity entity,List<RequestData> block){
-        List<RequestData> executeAheadBlock = new ArrayList<>(block.size());
-
-        for (RequestData request : block) {
-            executeAheadBlock.add(this.executeAhead(entity,request));
+    public List<RequestData> executeRequestsAhead(Entity entity, List<RequestData> block) {
+        List<RequestData> result = new ArrayList<>(block.size());
+        for (RequestData req : block) {
+            result.add(this.executeAhead(entity, req));
         }
-        return executeAheadBlock;
+        return result;
     }
 
-    public List<RequestData> validateRequests(List<RequestData> block,HashMap<Long, Integer> replies){
-        Map<Integer, Long> recordVersion= new TreeMap<>();
-        List<RequestData> newblock = new ArrayList<>();
-        for (RequestData request : block) {
-          boolean val = validate(request,replies,recordVersion);
-          request = request.toBuilder().setIsTnxValid(val).build();
-          newblock.add(request);
+    public List<RequestData> validateRequests(List<RequestData> block, Map<Long, Integer> replies) {
+        Map<Integer, Long> versionMap = new TreeMap<>();
+        List<RequestData> validated = new ArrayList<>();
 
+        for (RequestData req : block) {
+            boolean isValid = validate(req, replies, versionMap);
+            if(req.getWriteSetCount() > 0) {
+                entity.addWriteTransactionsCount(1);
+                entity.addTotalTransactionsCount(1);
+            }
+            else{
+                entity.addTotalTransactionsCount(1);
+            }
+            validated.add(req.toBuilder().setIsTnxValid(isValid).build());
         }
-        return newblock;
+
+        return validated;
     }
 
-    public void writeData(RequestData request){
-        for (var op: request.getWriteSetList()){
+    public void writeData(RequestData request) {
+        for (var op : request.getWriteSetList()) {
             int record = op.getRecord();
-            records.get(record).set(request.getEarlyExecResult());
+            // computeIfAbsent returns a non-null AtomicInteger
+            AtomicInteger counter = records.computeIfAbsent(
+                record,
+                x -> new AtomicInteger(DEFAULT_VALUE)
+            );
+            // safely overwrite with the early-exec result
+            counter.set(request.getEarlyExecResult());
         }
-
     }
 
-    public boolean validate(RequestData request,HashMap<Long, Integer> replies,Map<Integer, Long> recordVersion){
-        for (var op: request.getWriteSetList()){
-            int record = op.getRecord();
-            if(recordVersion.getOrDefault(record,Long.valueOf(0)) != 0){
-                replies.put(request.getRequestNum(),0);
+
+    private boolean validate(RequestData request, Map<Long, Integer> replies, Map<Integer, Long> versionMap) {
+        for (var op : request.getWriteSetList()) {
+            int rec = op.getRecord();
+            if (versionMap.getOrDefault(rec, 0L) != 0) {
+                replies.put(request.getRequestNum(), 0);
                 return false;
             }
         }
-
-        for(var op: request.getReadSetList()){
-            int record = op.getRecord();
-            if(recordVersion.getOrDefault(record,Long.valueOf(0)) != 0){
-                replies.put(request.getRequestNum(),0);
+        for (var op : request.getReadSetList()) {
+            int rec = op.getRecord();
+            if (versionMap.getOrDefault(rec, 0L) != 0) {
+                replies.put(request.getRequestNum(), 0);
                 return false;
             }
-            replies.put(request.getRequestNum(),1000);
+            replies.put(request.getRequestNum(), DEFAULT_VALUE);
         }
-
-        for (var op: request.getWriteSetList()){
-            int record = op.getRecord();
-            replies.put(request.getRequestNum(),request.getEarlyExecResult());
-            records.get(record).set(request.getEarlyExecResult());
-//            long currVersion = this.recordCurrVersion.getOrDefault(record,Long.valueOf(0))+1;
-//            this.recordLatVersion.put(record,currVersion+1);
-            recordVersion.put(record,Long.valueOf(1));
+        for (var op : request.getWriteSetList()) {
+            int rec = op.getRecord();
+            replies.put(request.getRequestNum(), request.getEarlyExecResult());
+            AtomicInteger counter = records.computeIfAbsent(
+                rec,
+                x -> new AtomicInteger(DEFAULT_VALUE)
+            );
+            counter.set(request.getEarlyExecResult());
+            versionMap.put(rec, 1L);
         }
-
-       return true;
+        return true;
     }
 
-    public int processRequestAhead(OperationSet operation){
+    public int processRequestAhead(OperationSet operation) {
+        AtomicInteger counter = records.get(operation.getRecord());
+        if (counter == null) {
+            counter = new AtomicInteger(DEFAULT_VALUE);
+        }
         return switch (operation.getOp()) {
-            case ADD -> records.get(operation.getRecord()).get()+ operation.getValue();
-            case SUB -> records.get(operation.getRecord()).get()-operation.getValue();
-            case INC -> records.get(operation.getRecord()).get()+1;
-            case DEC -> records.get(operation.getRecord()).get() - 1;
-            default -> records.get(operation.getRecord()).get();
+            case ADD -> counter.get() + operation.getValue();
+            case SUB -> counter.get() - operation.getValue();
+            case INC -> counter.get() + 1;
+            case DEC -> counter.get() - 1;
+            default -> counter.get();
         };
     }
-
-
 
     public Map<Integer, Long> getRecordCurrentVersion() {
         return recordCurrentVersion;
